--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PR'
+- GITenberg
 title: A Bachelor's Dream
 url: http://www.gutenberg.org/ebooks/27838
